--- a/src/Fostor.Ginkgo.Web.Mvc/bundleconfig.json
+++ b/src/Fostor.Ginkgo.Web.Mvc/bundleconfig.json
@@ -101,6 +101,31 @@
     ]
   },
   {
+    "outputFileName": "wwwroot/view-resources/Views/_Bundles/datatable.min.css",
+    "inputFiles": [
+      "wwwroot/lib/jquery-datatable/skin/bootstrap/css/dataTables.bootstrap.css",
+      "wwwroot/lib/jquery-datatable/extensions/buttons/buttons.bootstrap.min.css",
+      "wwwroot/lib/jquery-datatable/extensions/scroller/css/scroller.dataTables.min.css"
+    ]
+  },
+  {
+    "outputFileName": "wwwroot/view-resources/Views/_Bundles/datatable.min.js",
+    "inputFiles": [
+      "wwwroot/lib/jquery-datatable/jquery.dataTables.js",
+      "wwwroot/lib/jquery-datatable/skin/bootstrap/js/dataTables.bootstrap.js",
+      "wwwroot/lib/jquery-datatable/extensions/scroller/dataTables.scroller.min.js",
+      "wwwroot/lib/jquery-datatable/extensions/buttons/dataTables.buttons.min.js",
+      "wwwroot/lib/jquery-datatable/extensions/buttons/buttons.bootstrap.min.js",
+      "wwwroot/lib/jquery-datatable/extensions/buttons/buttons.colVis.min.js",
+      "wwwroot/lib/jquery-datatable/extensions/buttons/buttons.flash.min.js",
+      "wwwroot/lib/jquery-datatable/extensions/buttons/jszip.min.js",
+      "wwwroot/lib/jquery-datatable/extensions/buttons/pdfmake.min.js",
+      "wwwroot/lib/jquery-datatable/extensions/buttons/vfs_fonts.js",
+      "wwwroot/lib/jquery-datatable/extensions/buttons/buttons.html5.min.js",
+      "wwwroot/lib/jquery-datatable/extensions/buttons/buttons.print.min.js"
+    ]
+  },
+  {
     "outputFileName": "wwwroot/view-resources/Views/_Bundles/home-index.min.js",
     "inputFiles": [
       "wwwroot/lib/jquery-countTo/jquery.countTo.js",
