add role member management and update datatable footer style

--- a/src/Fostor.Ginkgo.Web.Mvc/bundleconfig.json
+++ b/src/Fostor.Ginkgo.Web.Mvc/bundleconfig.json
@@ -302,5 +302,11 @@
     "inputFiles": [
       "wwwroot/view-resources/Admin/SystemSetting/Index.js"
     ]
+  },
+  {
+    "outputFileName": "wwwroot/view-resources/Views/Shared/Components/DatePicker/Default.min.js",
+    "inputFiles": [
+      "wwwroot/view-resources/Views/Shared/Components/DatePicker/Default.js"
+    ]
   }
 ]
