--- a/src/Fostor.Ginkgo.Web.Mvc/appsettings.json
+++ b/src/Fostor.Ginkgo.Web.Mvc/appsettings.json
@@ -10,6 +10,9 @@
       "Audience": "Ginkgo"
     }
   },
+  "ApplicationCookie": {
+    "Name": "Ginkgo.Template"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
